<resources>
    <string name="app_name">WaterEver</string>

    <!-- MainActivity -->
    <string name="nav_header_title">WaterEver</string>
    <string name="nav_header_subtitle">Made with ❤ by 339</string>

    <string name="main_menu_home">主页</string>
    <string name="main_menu_plant_list">所有植物</string>
    <string name="main_menu_reminder">提醒</string>
    <string name="main_menu_more">更多</string>
    <string name="main_menu_settings">设置</string>

    <!-- PlantsFragment -->
    <string name="plants_empty_notice">暂无植物，点击右下角菜单添加</string>

    <!-- NewPlantActivity -->
    <string name="new_plant_label">新植物</string>
    <string name="new_plant_success">添加植物成功</string>
    <string name="new_plant_failed">添加植物失败</string>

    <!-- NewPlantNameFragment -->
    <string name="new_plant_name_label">名称(1/5)</string>
    <string name="new_plant_name">植物名称</string>
    <string name="new_plant_name_can_not_be_empty">请填写植物名</string>

    <!-- NewPlantFeatureImageFragment -->
    <string name="new_plant_feature_image_label">图片(2/5)</string>

    <!-- NewPlantCategoryFragment -->
    <string name="new_plant_category_label">分类(3/5)</string>
    <string name="new_plant_category_empty_notice">暂无分类，点击右上角添加</string>

    <!-- NewPlantTagFragment -->
    <string name="new_plant_tag_label">标签(4/5)</string>
    <string name="new_plant_tag_empty_notice">暂无标签，点击右上角添加</string>

    <!-- NewPlantDescriptionFragment -->
    <string name="new_plant_description_label">备注(5/5)</string>
    <string name="new_plant_description">添加备注</string>

    <!-- CategoriesActivity -->
    <string name="categories_label">分类</string>
    <string name="categories_empty_notice">暂无分类，点击右上角添加</string>
    <string name="categories_new">新增分类</string>
    <string name="categories_already_exist">已存在该分类，请不要重复创建</string>
    <string name="categories_delete">删除</string>

    <string name="dialog_categories_new">新增分类</string>
    <string name="dialog_categories_add">添加</string>

    <!-- TagsActivity -->
    <string name="tags_label">标签</string>
    <string name="tags_empty_notice">暂无标签，点击右上角添加</string>
    <string name="tags_new">新增标签</string>
    <string name="tags_already_exist">已存在该标签，请不要重复创建</string>
    <string name="tags_delete">删除</string>

    <string name="dialog_tags_new">新增标签</string>
    <string name="dialog_tags_add">添加</string>

    <!-- SettingsActivity -->
    <string name="settings_label">设置</string>

    <string name="home_plant_recent_record">最近活动：%s</string>
    <string name="home_plant_no_record">最近没有活动</string>

    <!-- NewGrowthRecordActivity -->
    <string name="new_growth_record_success">添加记录成功</string>
    <string name="new_growth_record_failed">添加记录失败</string>

    <!-- GrowthRecordPlantFragment -->
    <string name="new_growth_record_plant_label">选择植物</string>
    <string name="new_growth_record_plant_new">新增植物</string>
    <string name="new_growth_record_plant_empty_notice">暂无植物，点击右上角添加</string>
    <string name="new_growth_record_plant_next_step">下一步</string>

    <!-- GrowthRecordTypeFragment -->
    <string name="new_growth_record_type_label">记录类型</string>
    <string name="new_growth_record_type_next_step">下一步</string>

    <!-- GrowthRecordImageFragment -->
    <string name="new_growth_record_image_label">图片</string>
    <string name="new_growth_record_image_next_step">下一步</string>

    <!-- GrowthRecordDescriptionFragment -->
    <string name="new_growth_record_description_label">备注</string>
    <string name="new_growth_record_description">添加备注</string>
    <string name="new_growth_record_description_complete">完成</string>

    <!-- GrowthRecordType -->
    <string name="growth_record_type_watering">浇水</string>
    <string name="growth_record_type_change_soil">换土</string>
    <string name="growth_record_type_fertilize">施肥</string>
    <string name="growth_record_type_photos">照片</string>

    <string name="transition_plant_image">plant_image</string>

    <string name="time_unit_day">天</string>
    <string name="time_unit_hour">小时</string>
    <string name="time_unit_minute">分钟</string>
    <string name="time_unit_second">秒</string>

    <string name="time_interval_day">%d天前</string>
    <string name="time_interval_hour">%d小时前</string>
    <string name="time_interval_minute">%d分钟前</string>
    <string name="time_interval_second">%d秒前</string>

    <string name="plant_create_time_prefix">创建于：%s</string>

    <string name="external_storage_required">需要获取读取存储权限才可以获取相册图片</string>
    <string name="permissions_permit">授予权限</string>
    <string name="permissions_denied">获取权限失败</string>
    <string name="external_storage_not_available">未获取读取权限无法获取图片</string>

    <string name="error_unknown">未知错误</string>

</resources>