<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="me.zhiyao.waterever.ui.main.home.HomeFragment"
        android:label="@string/main_menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_plant_list"
        android:name="me.zhiyao.waterever.ui.main.plants.PlantsFragment"
        android:label="@string/main_menu_plant_list"
        tools:layout="@layout/fragment_plants" />

    <fragment
        android:id="@+id/nav_reminder"
        android:name="me.zhiyao.waterever.ui.main.reminder.ReminderFragment"
        android:label="@string/main_menu_reminder"
        tools:layout="@layout/fragment_reminder" />

    <activity
        android:id="@+id/nav_settings"
        android:name="me.zhiyao.waterever.ui.settings.SettingsActivity"
        android:label="@string/settings_label"
        tools:layout="@layout/activity_settings" />

</navigation>