<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_growth_record_navigation"
    app:startDestination="@id/fg_new_growth_record_plant">

    <fragment
        android:id="@+id/fg_new_growth_record_plant"
        android:name="me.zhiyao.waterever.ui.record.create.plant.NewGrowthRecordPlantFragment"
        android:label="@string/new_growth_record_plant_label"
        tools:layout="@layout/fragment_new_growth_record_plant">
        <action
            android:id="@+id/action_plant_to_type"
            app:destination="@id/fg_new_growth_record_type"
            app:enterAnim="@anim/anim_slide_right_in"
            app:exitAnim="@anim/anim_slide_left_out"
            app:popEnterAnim="@anim/anim_slide_left_in"
            app:popExitAnim="@anim/anim_slide_right_out" />
    </fragment>

    <fragment
        android:id="@+id/fg_new_growth_record_type"
        android:name="me.zhiyao.waterever.ui.record.create.type.NewGrowthRecordTypeFragment"
        android:label="@string/new_growth_record_type_label"
        tools:layout="@layout/fragment_new_growth_record_type">
        <action
            android:id="@+id/action_type_to_image"
            app:destination="@id/fg_new_growth_record_image"
            app:enterAnim="@anim/anim_slide_right_in"
            app:exitAnim="@anim/anim_slide_left_out"
            app:popEnterAnim="@anim/anim_slide_left_in"
            app:popExitAnim="@anim/anim_slide_right_out" />
        <action
            android:id="@+id/action_type_to_description"
            app:destination="@id/fg_new_growth_record_description"
            app:enterAnim="@anim/anim_slide_right_in"
            app:exitAnim="@anim/anim_slide_left_out"
            app:popEnterAnim="@anim/anim_slide_left_in"
            app:popExitAnim="@anim/anim_slide_right_out" />
    </fragment>

    <fragment
        android:id="@+id/fg_new_growth_record_image"
        android:name="me.zhiyao.waterever.ui.record.create.image.NewGrowthRecordImageFragment"
        android:label="@string/new_growth_record_image_label"
        tools:layout="@layout/fragment_new_growth_record_image">
        <action
            android:id="@+id/action_image_to_description"
            app:destination="@id/fg_new_growth_record_description"
            app:enterAnim="@anim/anim_slide_right_in"
            app:exitAnim="@anim/anim_slide_left_out"
            app:popEnterAnim="@anim/anim_slide_left_in"
            app:popExitAnim="@anim/anim_slide_right_out" />
    </fragment>

    <fragment
        android:id="@+id/fg_new_growth_record_description"
        android:name="me.zhiyao.waterever.ui.record.create.description.NewGrowthRecordDescriptionFragment"
        android:label="@string/new_growth_record_description_label"
        tools:layout="@layout/fragment_new_growth_record_description" />

</navigation>